<resources>
    <string name="app_name">Friend Chat</string>
    <string name="top_icon">TOP ICON</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="btn_Save">Save</string>
</resources>